# Vulkan-Playground

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
shaders/: BRDF_LUT_Generation.frag.glsl  cube.frag.glsl  cube.vert.glsl  cubemapGeneration.frag.glsl  cubemapGeneration.vert.glsl  environmentMapPrefilter.frag.glsl  fullscreenQuad.vert.glsl  irradianceGeneration.frag.glsl  lightCube.frag.glsl  lightCube.vert.glsl  normaldebug.frag.glsl  normaldebug.geom.glsl  normaldebug.vert.glsl  postprocess.frag.glsl  postprocess.vert.glsl  skybox.frag.glsl  skybox.vert.glsl  triangle.frag.glsl  triangle.vert.glsl
src/: SafeQueue.h  SandboxApp.cpp  mathlib.h  renderer.cpp  utils.cpp  utils.h
src/Engine/: AppWindow.cpp  AppWindow.h  Application.cpp  Application.h  Core.h  EntryPoint.cpp  EntryPoint.h  ImGuiLayer.cpp  ImGuiLayer.h  Input.cpp  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Model.cpp  Model.h  MouseButtonCodes.h  Timestep.h  Window.cpp  Window.h  vulkanexamplebase.h
src/Engine/Core/: NotificationQueue.cpp  NotificationQueue.h
src/Engine/Events/: Event.h  KeyEvents.h  MouseEvents.h  WindowEvents.h
src/Engine/ImGui/: ImGuiBindings.cpp  ImGuiLayer.cpp  ImGuiLayer.h
src/Engine/Include/: Engine.h
src/Engine/Renderer/: Camera.h  Device.cpp  Device.h  GraphicsContext.cpp  GraphicsContext.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Pipeline.cpp  Pipeline.h  RenderCommand.cpp  RenderCommand.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  ShaderPipeline.cpp  ShaderPipeline.h  ShaderProgram.cpp  ShaderProgram.h  ShaderResources.cpp  ShaderResources.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexBuffer.cpp  VertexBuffer.h  renderer.cpp  renderer.h  utils.cpp  utils.h  vulkan_wrappers.cpp  vulkan_wrappers.h
src/Engine/Utils/: PlatformUtils.h
src/Platform/Linux/: InputLinux.h  PlatformUtilsLinux.cpp  WindowLinux.cpp  WindowLinux.h
src/Platform/MacOS/: DialogsMacOS.h  DialogsMacOS.mm  InputMacOS.h  PlatformUtilsMacOS.cpp  WindowMacOS.cpp  WindowMacOS.h
src/Platform/Vulkan/: CoreVk.h  GraphicsContextVk.cpp  GraphicsContextVk.h  ImGuiLayerVk.cpp  ImGuiLayerVk.h  IndexBufferVk.cpp  IndexBufferVk.h  PipelineVk.cpp  PipelineVk.h  RenderPassVk.cpp  RenderPassVk.h  RendererVk.cpp  RendererVk.h  ShaderPipelineVk.cpp  ShaderPipelineVk.h  ShaderProgramVk.cpp  ShaderProgramVk.h  TextureVk.cpp  TextureVk.h  UniformBufferVk.cpp  UniformBufferVk.h  VertexBufferVk.cpp  VertexBufferVk.h  VulkanRendererAPI.cpp  VulkanRendererAPI.h
src/Platform/Windows/: InputWin32.cpp  InputWin32.h  WindowWin32.cpp  WindowWin32.h
src/Renderer/: Device.cpp  Device.h  renderer.cpp  renderer.h  utils.cpp  utils.h  vulkan_wrappers.cpp  vulkan_wrappers.h
textures/car/: car_metallic.tif  car_normal.tif  car_roughness.tif
